@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.149 2006/11/29 19:42:46 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.150 2006/11/29 19:58:51 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -183,6 +183,14 @@ $conf->display_img_attach = true;
 
 // If you don't want to display text/plain attachments set it to 'false'
 $conf->display_text_attach = true;
+
+// Column order from the messages list
+//  1 = From
+//  2 = To
+//  3 = Subject
+//  4 = Date
+//  5 = Size
+$conf->column_order = array('1', '2', '3', '4', '5');
 
 // By default the messages are sorted by date 
 $conf->default_sort = '1';
